cros: Fix animation not displaying when switching between users

Only happens where there are 2+ users (ie, user list is used).

OnImageDecoded is supposed to use the animation playback type that was
set in SetAnimationEnabled. However, UpdateForUser calls SetImage which
updates image_->playback() to kFirstFrameOnly. This means that
OnImageDecoded cannot use image_->playback() as the playback type set
by SetAnimationEnabled.

Bug: 894771
Change-Id: I47ac6daa1e8780e58abdabf59a7642ca4b9dcc43
Reviewed-on: https://chromium-review.googlesource.com/c/1277699
Reviewed-by: Wenzhao (Colin) Zang <wzang@chromium.org>
Commit-Queue: Jacob Dufault <jdufault@chromium.org>
Cr-Commit-Position: refs/heads/master@{#599731}